:sparkles: Create Snake package

--- a/snake/package.json
+++ b/snake/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "ts-node ./src/index.ts",
     "dev": "nodemon --config nodemon.json -e ts",
     "build": "tsc"
   },
