--- a/todo-tsed/package.json
+++ b/todo-tsed/package.json
@@ -16,6 +16,7 @@
     "@tsed/di": "^6.23.1",
     "@tsed/exceptions": "^6.23.1",
     "@tsed/json-mapper": "^6.23.1",
+    "@tsed/mongoose": "^6.23.1",
     "@tsed/platform-express": "^6.23.1",
     "@tsed/schema": "^6.23.1",
     "ajv": "^7.0.3",
@@ -36,8 +37,11 @@
     "@types/multer": "^1.4.5",
     "@types/node": "^14.14.22",
     "concurrently": "^5.3.0",
+    "mongoose": "^5.11.13",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
-  }
+  },
+  "readme": "ERROR: No README data found!",
+  "_id": "todo-tsed@1.0.0"
 }
