--- a/todo-tsed/package.json
+++ b/todo-tsed/package.json
@@ -10,15 +10,16 @@
     "start:prod": "cross-env NODE_ENV=production node dist/index.js"
   },
   "dependencies": {
-    "@tsed/ajv": "^6.23.1",
-    "@tsed/common": "^6.23.1",
-    "@tsed/core": "^6.23.1",
-    "@tsed/di": "^6.23.1",
-    "@tsed/exceptions": "^6.23.1",
-    "@tsed/json-mapper": "^6.23.1",
-    "@tsed/mongoose": "^6.23.1",
-    "@tsed/platform-express": "^6.23.1",
-    "@tsed/schema": "^6.23.1",
+    "@tsed/ajv": "^6.23.3",
+    "@tsed/common": "^6.23.3",
+    "@tsed/core": "^6.23.3",
+    "@tsed/di": "^6.23.3",
+    "@tsed/exceptions": "^6.23.3",
+    "@tsed/json-mapper": "^6.23.3",
+    "@tsed/mongoose": "^6.23.3",
+    "@tsed/platform-express": "^6.23.3",
+    "@tsed/schema": "^6.23.3",
+    "@tsed/swagger": "^6.23.3",
     "ajv": "^7.0.3",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
