:lipstick: Add spectre css and improve ui with it

--- a/todo/client-vue3/package.json
+++ b/todo/client-vue3/package.json
@@ -6,6 +6,7 @@
     "build": "vite build"
   },
   "dependencies": {
+    "spectre.css": "^0.5.9",
     "vue": "^3.0.4"
   },
   "devDependencies": {
