--- a/todo/client-react-native/package.json
+++ b/todo/client-react-native/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@react-native-community/checkbox": "^0.5.7",
+    "axios": "^0.21.1",
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
