--- a/todo/client-ink/package.json
+++ b/todo/client-ink/package.json
@@ -16,6 +16,7 @@
 	],
 	"dependencies": {
 		"axios": "^0.21.1",
+		"dotenv": "^9.0.2",
 		"import-jsx": "^4.0.0",
 		"ink": "^3.0.8",
 		"meow": "^9.0.0",
