--- a/todo/client-ink/package.json
+++ b/todo/client-ink/package.json
@@ -19,6 +19,7 @@
 		"dotenv": "^9.0.2",
 		"import-jsx": "^4.0.0",
 		"ink": "^3.0.8",
+		"ink-select-input": "^4.2.0",
 		"meow": "^9.0.0",
 		"react": "^17.0.2"
 	},
